--- a/main.css
+++ b/main.css
@@ -20,7 +20,13 @@ button {
     justify-content: space-between;
     align-items: center;
     color: #2c3e50;
+  }
+  select {
+    appearance: none;
+  }
 
+  input {
+    outline: none;
   }
   nav span{
     margin-left: 20px;
@@ -88,3 +94,95 @@ button {
   .about__info {
     max-width: 550px;
   }
+  .form__container {
+    width: 550px;
+    background-color: #1D263A; color: #fff;
+    text-align: center;
+    padding-top: 115px; 
+    padding-bottom: 115px;
+    padding-right:50px;
+    padding-left:50px;
+  }
+  .form h1 {
+    font-size: 48px;
+  }
+  .form p {
+    font-size: 16px;
+    opacity: 0.65;
+  }
+  .form {
+    display: flex;  
+    justify-content: center; align-items: center;
+
+  }
+  .form__group {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+  }
+  .form form{
+    display: grid;
+    grid-gap: 20px;
+    margin-top: 60px;
+  }
+.form label{
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 15px;
+
+}
+.form input{
+  font: size 18px;
+  color: #213053;
+  height: 60px;
+  padding: 0px 20px;
+  border-radius: 15px;
+  width: 20vw;
+}
+.form select {
+  font: size 18px;
+  color: #213053;
+  height: 60px;
+  padding: 0px 20px;
+  border-radius: 15px;
+}
+.form__submit{
+  font: size 18px;
+  font-weight:600;
+  padding: 40px;
+}
+button:hover{
+  background-color: #f6980c;
+  box-shadow: 0 16px 36px rgba(246 152 12 / 20%);
+  transition: background-color 1s ease;
+}
+footer{
+  font-size: 16px;
+  padding: 90px,20px,90px,20px;
+  font-weight:600;
+}
+.footer__container{
+  display: flex;  
+  justify-content: center; align-items: center;
+}
+.footer__copyright{  
+  text-align: center;
+  padding: 40px;
+  opacity: 0.5;
+}
+.footer__group{
+  padding-right: 40px;
+  
+}
+.footer__group h3{
+  font-size: 16px;
+  opacity: 0.7;
+  padding-bottom: 30px;
+}
+div .footer_links{
+  display: flex;  
+  flex-direction: column;
+}
+.footer__links a{
+  padding-bottom: 15px;
+}
